# Flybook

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: python-test.yml
flybook/: __init__.py  __main__.py  cli.py  config.py  logbook.py  logentry.py
flybook/gui/: gui_logbook.py
paralogbook/: __init__.py  __main__.py  gui.py  igc.py  logbook.py  logentry.py
res/: main.ui
tests/: test_igc.py  test_logbook.py  test_logentry.py
tests/res/: 2022-02-12-XCT-GHO-01.igc  2022-02-13-XCT-GHO-01.igc  2022-02-13-XCT-GHO-02.igc
