[metadata]
name = Flybook
version = 0.0.1
author = Gergely Horváth
author_email = horvath@gergely.xyz
description = Flight log manager for paragliding
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gergely-xyz/Flybook
project_urls =
    Bug Tracker = https://github.com/gergely-xyz/Flybook/issues
license = GNU GPLv3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    Topic :: Utilities

[options]
install_requires =
    appdirs
    typer
    # pyside6
    reverse_geocode
    rich
    geopy
packages = flybook
python_requires = >=3.7
package_dir =
    =.

[options.extras_require]
dev = 
    pylint
    sphinx
    pytest

[options.entry_points]
console_scripts =
    flybook = flybook.__main__:APP
